modification in board/forlinx6410/Makefile

--- a/board/forlinx6410/Makefile
+++ b/board/forlinx6410/Makefile
@@ -28,7 +28,7 @@ include $(TOPDIR)/config.mk
 
 LIB	= $(obj)lib$(BOARD).o
 
-COBJS-y	:= smdk6400.o
+COBJS-y	:= forlinx6410.o
 SOBJS	:= lowlevel_init.o
 
 SRCS    := $(SOBJS:.o=.S) $(COBJS-y:.o=.c)
