--- a/nand_spl/board/forlinx6410/Makefile
+++ b/nand_spl/board/forlinx6410/Makefile
@@ -38,7 +38,7 @@ AFLAGS	+= -DCONFIG_NAND_SPL
 CFLAGS	+= -DCONFIG_NAND_SPL -ffunction-sections
 
 SOBJS	= start.o cpu_init.o lowlevel_init.o
-COBJS	= nand_boot.o nand_ecc.o s3c64xx.o smdk6400_nand_spl.o nand_base.o
+COBJS	= nand_boot.o nand_ecc.o s3c64xx.o forlinx6410_nand_spl.o nand_base.o
 
 SRCS	:= $(addprefix $(obj),$(SOBJS:.o=.S) $(COBJS:.o=.c))
 OBJS	:= $(addprefix $(obj),$(SOBJS) $(COBJS))
@@ -78,7 +78,7 @@ $(obj)cpu_init.S:
 # from board directory
 $(obj)lowlevel_init.S:
 	@rm -f $@
-	@ln -s $(TOPDIR)/board/samsung/smdk6400/lowlevel_init.S $@
+	@ln -s $(TOPDIR)/board/forlinx6410/lowlevel_init.S $@
 
 # from nand_spl directory
 $(obj)nand_boot.c:
@@ -94,9 +94,9 @@ $(obj)s3c64xx.c:
 	@rm -f $@
 	@ln -s $(TOPDIR)/drivers/mtd/nand/s3c64xx.c $@
 
-$(obj)smdk6400_nand_spl.c:
+$(obj)forlinx6410_nand_spl.c:
 	@rm -f $@
-	@ln -s $(TOPDIR)/board/samsung/smdk6400/smdk6400_nand_spl.c $@
+	@ln -s $(TOPDIR)/board/forlinx6410/forlinx6410_nand_spl.c $@
 
 $(obj)nand_base.c:
 	@rm -f $@
