--- a/nand_spl/board/ok6410/Makefile
+++ b/nand_spl/board/ok6410/Makefile
@@ -38,8 +38,8 @@ AFLAGS	+= -DCONFIG_NAND_SPL
 CFLAGS	+= -DCONFIG_NAND_SPL -ffunction-sections
 
 SOBJS	= start.o cpu_init.o lowlevel_init.o
-COBJS	= nand_boot.o nand_ecc.o s3c64xx.o nand_base.o
-#COBJS	= nand_boot.o nand_ecc.o s3c64xx.o ok6410_nand_spl.o nand_base.o
+#COBJS	= nand_boot.o nand_ecc.o s3c64xx.o nand_base.o
+COBJS	= nand_boot.o nand_ecc.o s3c64xx.o ok6410_nand_spl.o nand_base.o
 
 SRCS	:= $(addprefix $(obj),$(SOBJS:.o=.S) $(COBJS:.o=.c))
 OBJS	:= $(addprefix $(obj),$(SOBJS) $(COBJS))
